--- a/index-particles.html
+++ b/index-particles.html
@@ -4,9 +4,20 @@
 	
 	<!-- Basic -->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Hendrie - Personal/CV/Resume HTML Template</title>
-	<meta name="description" content="">
+	<title>Priyank Prajapati Portfolio</title>
+	<meta name="description" content="Priyank Prajapati Portfolio">
 	<meta name="keywords" content="">
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
+    script-src 'self' 'unsafe-inline' 'unsafe-eval'; 
+    style-src 'self' 'unsafe-inline'; 
+    img-src 'self' data:; 
+    font-src 'self' data:; 
+    object-src 'none'; 
+    base-uri 'self'; 
+    form-action 'self'; 
+    frame-ancestors 'none'; 
+    block-all-mixed-content; 
+    upgrade-insecure-requests;">
 	
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -22,10 +33,6 @@
 	<link rel="stylesheet" href="css/magnific-popup.css" />
 	<link rel="stylesheet" href="css/animate.css" />
 	
-	<!--[if lt IE 9]>
-	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
 	
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="images/favicons/favicon.ico">
@@ -52,7 +59,7 @@
 		<header class="header">
 			<div class="fw">
 				<div class="logo">
-					<a href="#">H.</a>
+					<a href="#">Priyank P.</a>
 				</div>
 				<a href="#" class="menu-btn"><span></span></a>
 				<div class="top-menu">
@@ -60,7 +67,6 @@
 						<li><a href="#about-section">About</a></li>
 						<li><a href="#services-section">What I Do</a></li>
 						<li><a href="#works-section">Works</a></li>
-						<li><a href="#blog-section">Blog</a></li>
 						<li><a href="#contact-section">Contact</a></li>
 					</ul>
 					<a href="#" class="close"></a>
@@ -78,12 +84,10 @@
 					<div class="vertical-center">
 						<div class="st-title align-center">
 							<div class="typing-title">
-								<p>UI/UX Design</p>
-								<p>Brand Identity</p>
-								<p>Web Design</p>
-								<p>Mobile Apps</p>
-								<p>Analytics</p>
-								<p>Photography</p>
+								<p>Game Development</p>
+								<p>Animation</p>
+								<p>Game Designing</p>
+								<p>VFX</p>
 							</div>
 							<span class="typed-title"></span>
 						</div>
@@ -96,13 +100,16 @@
 			<div class="section about align-left" id="about-section">
 				<div class="fw">
 					<div class="text-box">
-						<h1 class="animated">I'm Steven Hendrie, <br />Web Designer & Web Developer <br />from United States, California.</h1>
+						<h1 class="animated">I'm Priyank, <br />Game Developer <br />from Toronto.</h1>
 						<p class="animated">
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque <br />laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi <br />architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas <br />sit aspernatur aut odit aut fugit. Sed ut perspiciatis unde omnis iste natus error.
+							I specialize in creating immersive gaming experiences and am enthusiastic about contributing to the gaming industry.
+							Explore my portfolio to discover a collection of projects showcasing my skills in game design, programming (e.g., C#, Python), and use of game engines (e.g., Unity, Unreal Engine). Each project reflects my dedication to learning and improving as a game developer.
+							In addition to my projects, you'll find details about my skills, including proficiency in beginner-level programming languages, game engines, and tools commonly used in game development. My goal is to continue growing and contributing to innovative game projects.
+							I'm eager to embark on new challenges and expand my skills further. Let's connect and explore how we can create captivating gaming experiences together!
 						</p>
 					</div>
 					<div class="bts">
-						<a href="#" class="btn extra animated">Download Resume</a>
+						<a href="#" class="btn extra animated">Download CV</a>
 					</div>
 				</div>
 			</div>
@@ -117,42 +124,28 @@
 						<div class="col col-m-12 col-t-6 col-d-4">
 							<div class="service-item animated">
 								<div class="circle"><i class="icon ion ion-ios-browsers-outline"></i></div>
-								<div class="name">UI/UX Design</div>
+								<div class="name">Game Development</div>
 								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 							</div>
 						</div>
 						<div class="col col-m-12 col-t-6 col-d-4">
 							<div class="service-item animated">
 								<div class="circle"><i class="icon ion ion-ios-lightbulb-outline"></i></div>
-								<div class="name">Brand Identity</div>
+								<div class="name">Animation</div>
 								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 							</div>
 						</div>
 						<div class="col col-m-12 col-t-6 col-d-4">
 							<div class="service-item animated">
 								<div class="circle"><i class="icon ion ion-ios-color-wand-outline"></i></div>
-								<div class="name">Web Design</div>
+								<div class="name">Game Designing</div>
 								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 							</div>
 						</div>
 						<div class="col col-m-12 col-t-6 col-d-4">
 							<div class="service-item animated">
 								<div class="circle"><i class="icon ion ion-social-android-outline"></i></div>
-								<div class="name">Mobile Apps</div>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-							</div>
-						</div>
-						<div class="col col-m-12 col-t-6 col-d-4">
-							<div class="service-item animated">
-								<div class="circle"><i class="icon ion ion-ios-analytics-outline"></i></div>
-								<div class="name">Analytics</div>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-							</div>
-						</div>
-						<div class="col col-m-12 col-t-6 col-d-4">
-							<div class="service-item animated">
-								<div class="circle"><i class="icon ion ion-ios-camera-outline"></i></div>
-								<div class="name">Photography</div>
+								<div class="name">VFX</div>
 								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 							</div>
 						</div>
@@ -359,103 +352,30 @@
 				</div>
 			</div>
 
-			<!-- Blog -->
-			<div class="section works align-left gray" id="blog-section">
-				<div class="fw">
-					<div class="titles animated">
-						<div class="title">Latest Blogs</div>
-					</div>
-					<div class="row blog-items">
-						<div class="col col-m-12 col-t-4 col-d-4">
-							<div class="blog-item animated">
-								<div class="image">
-									<a href="blog-inner.html"><img src="images/blog/blog1.png" alt="" /></a>
-								</div>
-								<a href="blog-inner.html" class="name">By spite about do of do allow blush</a>
-								<p>Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat.</p>
-								<div class="date">Larry Stark - 7 September 2016</div>
-							</div>
-						</div>
-						<div class="col col-m-12 col-t-4 col-d-4">
-							<div class="blog-item animated">
-								<div class="image">
-									<a href="blog-inner.html"><img src="images/blog/blog2.png" alt="" /></a>
-								</div>
-								<a href="blog-inner.html" class="name">Two Before Arrow Not Relied</a>
-								<p>Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat.</p>
-								<div class="date">Larry Stark - 7 September 2016</div>
-							</div>
-						</div>
-						<div class="col col-m-12 col-t-4 col-d-4">
-							<div class="blog-item animated">
-								<div class="image">
-									<a href="blog-inner.html"><img src="images/blog/blog3.png" alt="" /></a>
-								</div>
-								<a href="blog-inner.html" class="name">By spite about do of do allow blush</a>
-								<p>Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat.</p>
-								<div class="date">Larry Stark - 7 September 2016</div>
-							</div>
-						</div>
-					</div>
-					<div class="clear"></div>
-				</div>
-			</div>
-
 			<!-- Section Contacts -->
 			<div class="section contacts align-left" id="contact-section">
 				<div class="fw">
 					<div class="titles animated">
 						<div class="title">Contact Me</div>
 					</div>
-					<div class="contact-form">
-						<form id="cform" method="post">
-							<div class="row">
-								<div class="col col-m-12 col-t-6 col-d-6 animated">
-									<div class="value">
-										<input type="text" name="name" placeholder="Name *" />
-									</div>
-								</div>
-								<div class="col col-m-12 col-t-6 col-d-6 animated">
-									<div class="value">
-										<input type="tel" name="tel" placeholder="Phone *" />
-									</div>
-								</div>
-								<div class="col col-m-12 col-t-6 col-d-6 animated">
-									<div class="value">
-										<input type="text" name="email" placeholder="Email *" />
-									</div>
-								</div>
-								<div class="col col-m-12 col-t-6 col-d-6 animated">
-									<div class="value">
-										<input type="text" name="subject" placeholder="Subject *" />
-									</div>
-								</div>
-								<div class="col col-m-12 col-t-12 col-d-12 animated">
-									<div class="value">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-								</div>
-								<div class="col col-m-12 col-t-12 col-d-12 animated">
-									<a href="#" class="btn" onclick="$('#cform').submit(); return false;">Send Message</a>
-								</div>
-							</div>
-						</form>
-						<div class="alert-success">
-							<p>Thanks, your message is sent successfully. We will contact you shortly!</p>
-						</div>
+					<div class="contact-details">
+						<p class="animated">
+							Name: Priyank Prajapati<br>
+							Phone: +1 (647) 554 2302<br>
+							Email: priyankprajapati126@gmail.com<br>
+							Location: Toronto, Canada<br>
+						</p>
 					</div>
 				</div>
 			</div>
+			
 
 			<!-- Footer -->
 			<footer class="align-center">
-				<div class="copy animated">© 2016 Hendrie. all rights reserved.</div>
+				<div class="copy animated">© 2024 Priyank. all rights reserved.</div>
 				<div class="st-soc animated">
-					<a target="blank" href="https://www.facebook.com"><i class="icon ion ion-social-facebook"></i></a>
-					<a target="blank" href="https://github.com"><i class="icon ion ion-social-github"></i></a>
-					<a target="blank" href="https://twitter.com"><i class="icon ion ion-social-twitter"></i></a>
-					<a target="blank" href="https://www.youtube.com"><i class="icon ion ion-social-youtube"></i></a>
-					<a target="blank" href="https://plus.google.com"><i class="icon ion ion-social-googleplus"></i></a>
+					<a target="blank" href="https://github.com/Priyank-Prajapati"><i class="icon ion ion-social-github"></i></a>
+					<a target="blank" href="https://www.linkedin.com/in/priyankprajapati/"><i class="icon ion ion-social-linkedin"></i></a>
 				</div>
 			</footer>
 			
