Updated about section

--- a/index-particles.html
+++ b/index-particles.html
@@ -103,7 +103,7 @@
 						<h1 class="animated">I'm Priyank, <br />Game Developer <br />from Toronto.</h1>
 						<p class="animated">
 							I specialize in creating immersive gaming experiences and am enthusiastic about contributing to the gaming industry.
-							Explore my portfolio to discover a collection of projects showcasing my skills in game design, programming (e.g., C#, Python), and use of game engines (e.g., Unity, Unreal Engine). Each project reflects my dedication to learning and improving as a game developer.
+							Explore my portfolio to discover a collection of projects showcasing my skills. Each project reflects my dedication to learning and improving as a game developer.
 							In addition to my projects, you'll find details about my skills, including proficiency in beginner-level programming languages, game engines, and tools commonly used in game development. My goal is to continue growing and contributing to innovative game projects.
 							I'm eager to embark on new challenges and expand my skills further. Let's connect and explore how we can create captivating gaming experiences together!
 						</p>
