Changes to the title

--- a/index-particles.html
+++ b/index-particles.html
@@ -157,7 +157,7 @@
 			<div class="section works align-left" id="works-section">
 				<div class="fw">
 					<div class="titles animated">
-						<div class="title">Recent Works</div>
+						<div class="title">Projects</div>
 					</div>
 					<div class="filters animated">
 						<div class="f_btn active">
