Added two game projects and their screenshots

--- a/index-particles.html
+++ b/index-particles.html
@@ -167,7 +167,7 @@
 							<label><input type="radio" name="fl_radio" value="f-branding" />Branding</label>
 						</div>
 						<div class="f_btn">
-							<label><input type="radio" name="fl_radio" value="f-mockups" />Mockups</label>
+							<label><input type="radio" name="fl_radio" value="f-mockups" />Game Projects</label>
 						</div>
 						<div class="f_btn">
 							<label><input type="radio" name="fl_radio" value="f-ui" />UI Kits</label>
@@ -181,26 +181,37 @@
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
-										<a href="#popup-1" class="has-popup"><img src="images/works/work1.jpg" alt="" /></a>
+										<a href="#popup-1" class="has-popup"><img src="images/works/frogWithGuns.png" alt="" /></a>
 									</div>
-									<div class="category">Mockups</div>
+									<div class="category">Game Projects</div>
 									<div class="name">
-										<a href="#popup-1" class="has-popup">Shopping Bag PSD MockUp</a>
+										<a href="#popup-1" class="has-popup">Frog With Guns</a>
 									</div>
 								</div>
 							</div>
 							<div id="popup-1" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
 									<div class="image">
-										<img src="images/works/work1.jpg" alt="">
+										<img src="images/works/frogWithGuns.png" alt="">
 									</div>
 									<div class="desc">
-										<div class="category">Mockups</div>
-										<h4>Shopping Bag PSD MockUp</h4>
+										<div class="category">Game Projects</div>
+										<h4>Frog With Guns</h4>
 										<p>
-											Here’s a new b-cards mock-up with several business cards scattered across the scene. The PSD file allows you to easily. Here’s a new b-cards mock-up with several business cards scattered across the scene.
+											<h6>Concept</h6>
+											Frogs with Guns is a 3D, two-player, third-person shooter game where you and a friend team up to navigate a maze, defeat enemy frogs, and collect magical rings to escape within a time limit.										
 										</p>
-										<a href="#" class="btn">View Project</a>
+										<p>
+											<h6>Key Features:</h6>
+											<ul style = list-style-type:disc;>
+												<li>Cooperative multiplayer: Work together with a friend to overcome challenges.</li>
+												<li>3D graphics and immersive gameplay: Experience the action from a frog's perspective.</li>
+												<li>3 levels with increasing difficulty: Test your teamwork and skills across various challenges.</li>
+												<li>Time pressure: Adds urgency and excitement to the gameplay.</li>
+												<li>Magical rings: Collect them to unlock the exit portal and escape the maze.</li>
+											</ul>
+										</p>
+										<a href="https://github.com/Priyank-Prajapati/FrogsWithGun_Game.git" target="_blank" class="btn">Github Project Link</a>
 									</div>
 								</div>
 							</div>
@@ -238,26 +249,36 @@
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
-										<a href="#popup-3" class="has-popup"><img src="images/works/work3.jpg" alt="" /></a>
+										<a href="#popup-3" class="has-popup"><img src="images/works/flightToy.png" alt="" /></a>
 									</div>
-									<div class="category">Mockups</div>
+									<div class="category">Game Projects</div>
 									<div class="name">
-										<a href="#popup-3" class="has-popup">Realistic Business Cards</a>
+										<a href="#popup-3" class="has-popup">Flight Toy</a>
 									</div>
 								</div>
 							</div>
 							<div id="popup-3" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
 									<div class="image">
-										<img src="images/works/work3.jpg" alt="">
+										<img src="images/works/flightToy.png" alt="">
 									</div>
 									<div class="desc">
-										<div class="category">Mockups</div>
-										<h4>Realistic Business Cards</h4>
+										<div class="category">Game Projects</div>
+										<h4>Flight Toy</h4>
 										<p>
-											Today we’re happy to share with you the mockup of a classic notebook that will help you showcase your drawings. Today we’re happy to share with you the mockup of a classic notebook that will help.
+											<h6>Concept</h6>
+											Flight Toy is a 3D, single-player, flight simulation game where you control an airplane and navigate a 3D open world filled with mountains, water, and trees. Your objective is to score points by following a series of checkpoints while avoiding the ground.										
 										</p>
-										<a href="#" class="btn">View Project</a>
+										<p>
+											<h6>Key Features:</h6>
+											<ul style = list-style-type:disc;>
+												<li>3D graphics with beautiful scenery</li>
+												<li>Intuitive flight controls</li>
+												<li>Checkpoints to guide and scene your flight</li>
+												<li>Single-player experience</li>
+											</ul>										
+										</p>
+										<!--<a href="https://github.com/Priyank-Prajapati/FrogsWithGun_Game.git" target="_blank" class="btn">Github Project Link</a>-->
 									</div>
 								</div>
 							</div>
