--- a/index-particles.html
+++ b/index-particles.html
@@ -167,7 +167,7 @@
 							<label><input type="radio" name="fl_radio" value="f-branding" />Branding</label>
 						</div>
 						<div class="f_btn">
-							<label><input type="radio" name="fl_radio" value="f-mockups" />Game Projects</label>
+							<label><input type="radio" name="fl_radio" value="f-gameProjects" />Game Projects</label>
 						</div>
 						<div class="f_btn">
 							<label><input type="radio" name="fl_radio" value="f-ui" />UI Kits</label>
@@ -177,19 +177,19 @@
 						</div>
 					</div>
 					<div class="row box-items">
-						<div class="col col-m-12 col-t-6 col-d-6 box-item f-mockups">
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
-										<a href="#popup-1" class="has-popup"><img src="images/works/frogWithGuns.png" alt="" /></a>
+										<a href="#frogWithGuns" class="has-popup"><img src="images/works/frogWithGuns.png" alt="" /></a>
 									</div>
 									<div class="category">Game Projects</div>
 									<div class="name">
-										<a href="#popup-1" class="has-popup">Frog With Guns</a>
+										<a href="#frogWithGuns" class="has-popup">Frog With Guns</a>
 									</div>
 								</div>
 							</div>
-							<div id="popup-1" class="popup-box mfp-fade mfp-hide">
+							<div id="frogWithGuns" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
 									<div class="image">
 										<img src="images/works/frogWithGuns.png" alt="">
@@ -206,48 +206,135 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-m-12 col-t-6 col-d-6 box-item f-branding">
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
-										<a href="#popup-2" class="has-popup"><img src="images/works/work2.jpg" alt="" /></a>
+										<a href="#bolt" class="has-popup"><img src="images/works/bolt.png" alt="" /></a>
 									</div>
-									<div class="category">Branding</div>
+									<div class="category">Game Projects</div>
 									<div class="name">
-										<a href="#popup-2" class="has-popup">Realistic Business Cards</a>
+										<a href="#bolt" class="has-popup">Bolt - Escape the Devil</a>
 									</div>
 								</div>
 							</div>
-							<div id="popup-2" class="popup-box mfp-fade mfp-hide">
+							<div id="bolt" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
 									<div class="image">
-										<img src="images/works/work2.jpg" alt="">
+										<img src="images/works/bolt.png" alt="">
 									</div>
 									<div class="desc">
-										<div class="category">Branding</div>
-										<h4>Hanging Wall Sign</h4>
+										<div class="category">Game Projects</div>
+										<h4>Bolt - Escape the Devil</h4>
 										<p>
-											The freebie of the day is a logo design kit with an original theme that will help you create 
-											stunning mountain bike related logos in just minutes.
+											<h6>Concept</h6>
+											Bolt - Escape the Devil is a 2D, side-scrolling running game where you control a character who needs to outrun the devil and reach a safe haven (city) in a deserted landscape.										
 										</p>
-										<a href="#" class="btn">View Project</a>
+										<a href="https://github.com/Priyank-Prajapati/Bolt_Game.git" target="_blank" class="btn">Github Project Link</a>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col col-m-12 col-t-6 col-d-6 box-item f-mockups">
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
-										<a href="#popup-3" class="has-popup"><img src="images/works/flightToy.png" alt="" /></a>
+										<a href="#ceri" class="has-popup"><img src="images/works/ceri.png" alt="" /></a>
 									</div>
 									<div class="category">Game Projects</div>
 									<div class="name">
-										<a href="#popup-3" class="has-popup">Flight Toy</a>
+										<a href="#ceri" class="has-popup">Ceri - Back to Bowl</a>
 									</div>
 								</div>
 							</div>
-							<div id="popup-3" class="popup-box mfp-fade mfp-hide">
+							<div id="ceri" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image">
+										<img src="images/works/ceri.png" alt="">
+									</div>
+									<div class="desc">
+										<div class="category">Game Projects</div>
+										<h4>Ceri - Back to Bowl</h4>
+										<p>
+											<h6>Concept</h6>
+											Ceri Back to Bowl is a 2D, side-scrolling platformer where you control Ceri, a cereal piece, who needs to navigate a kitchen environment filled with obstacles to reach his bowl and reunite with his cereal family.
+										</p>
+										<a href="https://github.com/Priyank-Prajapati/Ceri_Game.git" target="_blank" class="btn">Github Project Link</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
+							<div class="item animated">
+								<div class="desc">
+									<div class="image">
+										<a href="#cookieCrumble" class="has-popup"><img src="images/works/cookieCrumble.png" alt="" /></a>
+									</div>
+									<div class="category">Game Projects</div>
+									<div class="name">
+										<a href="#cookieCrumble" class="has-popup">Cookie Crumble</a>
+									</div>
+								</div>
+							</div>
+							<div id="cookieCrumble" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image">
+										<img src="images/works/cookieCrumble.png" alt="">
+									</div>
+									<div class="desc">
+										<div class="category">Game Projects</div>
+										<h4>Cookie Crumble</h4>
+										<p>
+											<h6>Concept</h6>
+											Cookie Crumble is a 2D, single-player, comedic platformer game where you control a cookie named Cookie who is trying to escape the kitchen. Players navigate a pixelated kitchen environment, overcoming obstacles and defeating enemies (rats) to reach the exit.
+										</p>
+										<a href="https://github.com/Priyank-Prajapati/COMP394-FinalProject.git" target="_blank" class="btn">Github Project Link</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
+							<div class="item animated">
+								<div class="desc">
+									<div class="image">
+										<a href="#hiddenHorcrux" class="has-popup"><img src="images/works/hiddenHorcrux.png" alt="" /></a>
+									</div>
+									<div class="category">Game Projects</div>
+									<div class="name">
+										<a href="#hiddenHorcrux" class="has-popup">Hidden Horcrux</a>
+									</div>
+								</div>
+							</div>
+							<div id="hiddenHorcrux" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image">
+										<img src="images/works/hiddenHorcrux.png" alt="">
+									</div>
+									<div class="desc">
+										<div class="category">Game Projects</div>
+										<h4>Hidden Horcrux</h4>
+										<p>
+											<h6>Concept</h6>
+											Hidden Horcrux is a 2D, side-scrolling action-adventure game where you control Kalki, a demon hunter, on a quest to defeat the evil Kali. To succeed, Kalki must find and destroy hidden Horcruxes scattered throughout the underground world of Paatal Lok.
+										</p>
+										<a href="https://github.com/Priyank-Prajapati/Hidden_Horcrux.git" target="_blank" class="btn">Github Project Link</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
+							<div class="item animated">
+								<div class="desc">
+									<div class="image">
+										<a href="#flightToy" class="has-popup"><img src="images/works/flightToy.png" alt="" /></a>
+									</div>
+									<div class="category">Game Projects</div>
+									<div class="name">
+										<a href="#flightToy" class="has-popup">Flight Toy</a>
+									</div>
+								</div>
+							</div>
+							<div id="flightToy" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
 									<div class="image">
 										<img src="images/works/flightToy.png" alt="">
