--- a/index-particles.html
+++ b/index-particles.html
@@ -458,10 +458,8 @@
 				</div>
 			</div>
 			
-
 			<!-- Footer -->
-			<footer class="align-center">
-				<div class="copy animated">© 2024 Priyank. all rights reserved.</div>
+			<footer class="align-center footer-fixed">
 				<div class="st-soc animated">
 					<a target="blank" href="https://github.com/Priyank-Prajapati"><i class="icon ion ion-social-github"></i></a>
 					<a target="blank" href="https://www.linkedin.com/in/priyankprajapati/"><i class="icon ion ion-social-linkedin"></i></a>
