Updated game projects

--- a/index-particles.html
+++ b/index-particles.html
@@ -183,7 +183,7 @@
 									<div class="image">
 										<a href="#frogWithGuns" class="has-popup"><img src="images/works/frogWithGuns.png" alt="" /></a>
 									</div>
-									<div class="category">Game Projects</div>
+									<div class="category"></div>
 									<div class="name">
 										<a href="#frogWithGuns" class="has-popup">Frog With Guns</a>
 									</div>
@@ -195,10 +195,9 @@
 										<img src="images/works/frogWithGuns.png" alt="">
 									</div>
 									<div class="desc">
-										<div class="category">Game Projects</div>
+										<div class="category"></div>
 										<h4>Frog With Guns</h4>
 										<p>
-											<h6>Concept</h6>
 											Frogs with Guns is a 3D, two-player, third-person shooter game where you and a friend team up to navigate a maze, defeat enemy frogs, and collect magical rings to escape within a time limit.										
 										</p>
 										<a href="https://github.com/Priyank-Prajapati/FrogsWithGun_Game.git" target="_blank" class="btn">Github Project Link</a>
@@ -212,7 +211,7 @@
 									<div class="image">
 										<a href="#bolt" class="has-popup"><img src="images/works/bolt.png" alt="" /></a>
 									</div>
-									<div class="category">Game Projects</div>
+									<div class="category"></div>
 									<div class="name">
 										<a href="#bolt" class="has-popup">Bolt - Escape the Devil</a>
 									</div>
@@ -224,7 +223,7 @@
 										<img src="images/works/bolt.png" alt="">
 									</div>
 									<div class="desc">
-										<div class="category">Game Projects</div>
+										<div class="category"></div>
 										<h4>Bolt - Escape the Devil</h4>
 										<p>
 											<h6>Concept</h6>
@@ -241,7 +240,7 @@
 									<div class="image">
 										<a href="#ceri" class="has-popup"><img src="images/works/ceri.png" alt="" /></a>
 									</div>
-									<div class="category">Game Projects</div>
+									<div class="category"></div>
 									<div class="name">
 										<a href="#ceri" class="has-popup">Ceri - Back to Bowl</a>
 									</div>
@@ -253,7 +252,7 @@
 										<img src="images/works/ceri.png" alt="">
 									</div>
 									<div class="desc">
-										<div class="category">Game Projects</div>
+										<div class="category"></div>
 										<h4>Ceri - Back to Bowl</h4>
 										<p>
 											<h6>Concept</h6>
@@ -270,7 +269,7 @@
 									<div class="image">
 										<a href="#cookieCrumble" class="has-popup"><img src="images/works/cookieCrumble.png" alt="" /></a>
 									</div>
-									<div class="category">Game Projects</div>
+									<div class="category"></div>
 									<div class="name">
 										<a href="#cookieCrumble" class="has-popup">Cookie Crumble</a>
 									</div>
@@ -282,7 +281,7 @@
 										<img src="images/works/cookieCrumble.png" alt="">
 									</div>
 									<div class="desc">
-										<div class="category">Game Projects</div>
+										<div class="category"></div>
 										<h4>Cookie Crumble</h4>
 										<p>
 											<h6>Concept</h6>
@@ -299,7 +298,7 @@
 									<div class="image">
 										<a href="#hiddenHorcrux" class="has-popup"><img src="images/works/hiddenHorcrux.png" alt="" /></a>
 									</div>
-									<div class="category">Game Projects</div>
+									<div class="category"></div>
 									<div class="name">
 										<a href="#hiddenHorcrux" class="has-popup">Hidden Horcrux</a>
 									</div>
@@ -311,7 +310,7 @@
 										<img src="images/works/hiddenHorcrux.png" alt="">
 									</div>
 									<div class="desc">
-										<div class="category">Game Projects</div>
+										<div class="category"></div>
 										<h4>Hidden Horcrux</h4>
 										<p>
 											<h6>Concept</h6>
@@ -328,7 +327,7 @@
 									<div class="image">
 										<a href="#flightToy" class="has-popup"><img src="images/works/flightToy.png" alt="" /></a>
 									</div>
-									<div class="category">Game Projects</div>
+									<div class="category"></div>
 									<div class="name">
 										<a href="#flightToy" class="has-popup">Flight Toy</a>
 									</div>
@@ -340,7 +339,7 @@
 										<img src="images/works/flightToy.png" alt="">
 									</div>
 									<div class="desc">
-										<div class="category">Game Projects</div>
+										<div class="category"></div>
 										<h4>Flight Toy</h4>
 										<p>
 											<h6>Concept</h6>
