--- a/index-particles.html
+++ b/index-particles.html
@@ -453,12 +453,16 @@
 			</div>
 			
 			<!-- Footer -->
-			<footer class="align-center footer-fixed">
+			<footer class="footer-fixed">
 				<div class="st-soc animated">
 					<a target="blank" href="https://github.com/Priyank-Prajapati"><i class="icon ion ion-social-github"></i></a>
+				</div>
+				<div class="st-soc animated">
 					<a target="blank" href="https://www.linkedin.com/in/priyankprajapati/"><i class="icon ion ion-social-linkedin"></i></a>
 				</div>
 			</footer>
+
+			
 			
 		</div>
 
