Increased icon size

--- a/index-particles.html
+++ b/index-particles.html
@@ -455,10 +455,10 @@
 			<!-- Footer -->
 			<footer class="footer-fixed">
 				<div class="st-soc animated">
-					<a target="blank" href="https://github.com/Priyank-Prajapati"><i class="icon ion ion-social-github"></i></a>
+					<a target="blank" href="https://github.com/Priyank-Prajapati"><i class="icon ion ion-social-github" style="font-size: 24px;"></i></a>
 				</div>
 				<div class="st-soc animated">
-					<a target="blank" href="https://www.linkedin.com/in/priyankprajapati/"><i class="icon ion ion-social-linkedin"></i></a>
+					<a target="blank" href="https://www.linkedin.com/in/priyankprajapati/"><i class="icon ion ion-social-linkedin" style="font-size: 24px;"></i></a>
 				</div>
 			</footer>
 
