--- a/index-particles.html
+++ b/index-particles.html
@@ -461,6 +461,7 @@
 	<script src="js/main.js"></script>
 	<script src="js/particles.js"></script>
 	<script src="js/particles-setting.js"></script>
+	<script src="js/my.js"></script>
 	
 </body>
 </html>
