--- a/index-particles.html
+++ b/index-particles.html
@@ -78,7 +78,7 @@
 
 			<!-- Section Started -->
 			<div class="section started">
-				<div id="particles-bg" class="slide" style="background-image: url(images/slide-bg-1.jpg);"></div>
+				<div id="particles-bg" class="slide" style="background-image: url(images/bgImage.jpg);"></div>
 				<div class="centrize full-width">
 					<div class="vertical-center">
 						<div class="st-title align-center">
@@ -344,7 +344,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-m-12 col-t-6 col-d-6 box-item f-branding">
+						<!-- <div class="col col-m-12 col-t-6 col-d-6 box-item f-branding">
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
@@ -428,7 +428,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="clear"></div>
 				</div>
@@ -442,8 +442,7 @@
 				<div class="st-soc animated">
 					<a target="blank" href="https://www.linkedin.com/in/priyankprajapati/"><i class="icon ion ion-social-linkedin" style="font-size: 22px;"></i></a>
 				</div>
-			</footer>
-			
+			</footer>			
 		</div>
 
 	</div>
