--- a/index-particles.html
+++ b/index-particles.html
@@ -66,7 +66,7 @@
 					<ul>
 						<li><a href="#about-section">About</a></li>
 						<li><a href="#services-section">What I Do</a></li>
-						<li><a href="#works-section">Works</a></li>
+						<li><a href="#works-section">Projects</a></li>
 					</ul>
 					<a href="#" class="close"></a>
 				</div>
