--- a/index-particles.html
+++ b/index-particles.html
@@ -160,20 +160,23 @@
 							<label><input type="radio" name="fl_radio" value="box-item" />All</label>
 						</div>
 						<div class="f_btn">
-							<label><input type="radio" name="fl_radio" value="f-branding" />Branding</label>
+							<label><input type="radio" name="fl_radio" value="f-game2D" />2D Games</label>
 						</div>
 						<div class="f_btn">
-							<label><input type="radio" name="fl_radio" value="f-gameProjects" />Game Projects</label>
+							<label><input type="radio" name="fl_radio" value="f-game3D" />3D Games</label>
 						</div>
 						<div class="f_btn">
+							<label><input type="radio" name="fl_radio" value="f-arcadeGames" />Arcade Games</label>
+						</div>
+						<!-- <div class="f_btn">
 							<label><input type="radio" name="fl_radio" value="f-ui" />UI Kits</label>
 						</div>
 						<div class="f_btn">
 							<label><input type="radio" name="fl_radio" value="f-photo" />Photography</label>
-						</div>
+						</div> -->
 					</div>
 					<div class="row box-items">
-						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-game3D">
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
@@ -201,7 +204,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-game2D">
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
@@ -229,7 +232,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-game2D">
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
@@ -257,7 +260,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-game2D">
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
@@ -285,7 +288,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-game2D">
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
@@ -313,7 +316,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col col-m-12 col-t-6 col-d-6 box-item f-gameProjects">
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-game3D">
 							<div class="item animated">
 								<div class="desc">
 									<div class="image">
