--- a/index-particles.html
+++ b/index-particles.html
@@ -345,6 +345,34 @@
 								</div>
 							</div>
 						</div>
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-arcadeGames">
+							<div class="item animated">
+								<div class="desc">
+									<div class="image">
+										<a href="#pong" class="has-popup"><img src="images/works/pong.png" alt="" /></a>
+									</div>
+									<div class="category"></div>
+									<div class="name">
+										<a href="#pong" class="has-popup">Pong</a>
+									</div>
+								</div>
+							</div>
+							<div id="pong" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image">
+										<img src="images/works/pong.png" alt="">
+									</div>
+									<div class="desc">
+										<div class="category"></div>
+										<h4>Pong</h4>
+										<p>
+											Pong is a modern twist on the classic arcade game Pong, developed in Unity specifically for two players. While staying true to the original gameplay mechanics, this game adds exciting new challenges and difficulties to keep players engaged. Pong offers a fresh and exciting experience for fans of the original game and newcomers alike.
+										</p>
+										<a href="https://github.com/Priyank-Prajapati/Pong_Game.git" target="_blank" class="btn">Github Project Link</a>
+									</div>
+								</div>
+							</div>
+						</div>
 						<!-- <div class="col col-m-12 col-t-6 col-d-6 box-item f-branding">
 							<div class="item animated">
 								<div class="desc">
